Fix footer alignment

--- a/public/style.css
+++ b/public/style.css
@@ -75,6 +75,7 @@ header a img {
 footer {
   margin: 0 auto;
   padding: 3rem 2rem;
+  text-align: center;
 }
 
 body {
